# pkg-multibot

./: .gitignore  README.md  config.toml  mkdocs.yml
communication_test/: CMakeLists.txt  README.md  package.xml
communication_test/config/: real.rviz  stage.rviz  super_client_operator_config.xml  turtlesim.rviz  turtlesim_bridge_config.yaml
communication_test/config/dds_partitions/: cli_config.xml  operator_config.xml  robot_local_config.xml  robot_local_debug_config.xml  robot_shared_config.xml  stage_config.xml  talker_config.xml
communication_test/config/dds_server/: super_client_config.xml  super_client_operator_config.xml  super_client_robot0_config.xml
communication_test/config/domain_bridge/: stage_bridge_config_operator.yaml  turtlesim_bridge_config.yaml
communication_test/config/nav2/: nav2_localization_kobuki_22.yaml  nav2_params.yaml  nav2_params_kobuki.yaml
communication_test/config/zenoh/: stage_bridge_config_robot_operator.json5  stage_bridge_config_robot_sim.json5  stage_bridge_config_sim.json5
communication_test/docs/: real.md
communication_test/launch/: turtlesim_bridge_launch.py  turtlesim_dds_launch.py  turtlesim_namespace_launch.py
communication_test/launch/include/: load_map.py  rviz_launch.py  turtlesim_bridge_robot_launch.py  turtlesim_dds_robot_launch.py  turtlesim_namespace_robot_launch.py
communication_test/launch/kobuki/: kobuki_bridge_launch.py  kobuki_dds_launch.py  kobuki_namespace_launch.py
communication_test/launch/local/: turtlesim_bridge_launch.py  turtlesim_dds_launch.py  turtlesim_namespace_launch.py  turtlesim_partition_launch.py
communication_test/launch/nav/: localization_launch.py  navigation_launch.py
communication_test/launch/pibot/: joystick.launch.py  multibot.launch.py  pibot_turtlesim_bridge_launch.py  pibot_turtlesim_dds_launch.py  pibot_turtlesim_namespace_launch.py
communication_test/map/: map.pgm  map.yaml
communication_test/scripts/: README.md  discovery_packets.py  generate_discovery_packages.bash
communication_test/src/: dynamic_operator.py  kobuki_measure_controller.py  kobuki_warehouse_controller.py  operator.py  package_dispenser.py  parasit.py  stage_controller.py  stage_dds_bridge.py  stage_fake_localization.py  stage_init_pose.py  stage_mvt.py  stage_operator.py  static_operator.py  turtle_mvt.py  turtlesim_controller.py  warehouse_operator.py  wifi_measure.py
communication_test/world/: cave.world  cave_three_robots.world  warehouse.world
docs/: index.md  (+8 more)
multibot_domid/: CMakeLists.txt  package.xml
multibot_domid/scripts/: parasit  pulse_monitor  test_pub  test_sub
(+229 files in other folders)
